# AI

./: .gitignore  COMPLETE_REFACTORING_SUMMARY.md  EXECUTOR_REFACTORING_COMPLETE.md  FINAL_ARCHITECTURE_SUMMARY.md  IDEMPOTENCY_REFACTORING_SUMMARY.md  TechDoc.md  debug_test.py  pyproject.toml  pytest.ini  run_checks.bat  run_tests.py  simple_test.py  test_converters.py  test_llm.py
Readmes/: DEV_README.md
core/llms/: MODEL_REGISTRY.md  TOOL_INTEGRATION.md  __init__.py  base_llm.py  configs.py  constants.py  converters.py  defaults.py  enum.py  enums.py  exceptions.py  interfaces.py  llm.md  model_registry.py  models.py  tool_integration.py
core/llms/connectors/: __init__.py  azure_llm.py  gemini_llm.py
core/llms/connectors/azure/: __init__.py  azure_llm.py  converter.py  model_registry.py  models.py  tool_converter.py
core/llms/connectors/bedrock/: __init__.py  bedrock_llm.py  converter.py  model_registry.py  models.py  tool_converter.py
core/llms/connectors/gemini/: __init__.py  converter.py  gemini_llm.py  model_registry.py  models.py  tool_converter.py
core/llms/examples/: tool_usage_example.py
core/llms/interfaces/: __init__.py  llm_interfaces.py
core/llms/providers/: EXAMPLE_USAGE.py  README.md  REFACTORING_SUMMARY.md  __init__.py
core/llms/providers/azure/: __init__.py  base_implementation.py  connector.py
core/llms/providers/base/: __init__.py  connector.py  implementation.py  metadata.py
core/llms/runtimes/: __init__.py  base_connector.py  base_llm.py  llm_factory.py  model_registry.py
core/llms/runtimes/connectors/: __init__.py  azure_connector.py  openai_connector.py
core/llms/runtimes/implementations/: __init__.py  azure_llm.py  openai_llm.py
core/llms/runtimes/model_registries/: __init__.py  azure_gpt41_mini.py  azure_models.py  openai_models.py
core/llms/spec/: __init__.py  llm_context.py  llm_result.py  llm_types.py
core/tools/: README.md  __init__.py  config.py  constants.py  defaults.py  demo_logging_addition.py  enum.py  examples.py  executors.py  implementations.py  tool_types.py  validators.py
core/tools/executors/: __init__.py  base_executor.py  db_executor.py  db_strategies.py  executor.py  executor_factory.py  executors.py  function_executor.py  http_executor.py  noop_executor.py
core/tools/executors/db/: __init__.py  base_db_executor.py  dynamodb_executor.py
core/tools/executors/idempotency/: __init__.py  default_idempotency_key_gen.py  idempotency_key_gen_factory.py  idempotency_key_generator.py
core/tools/executors/policies/: README.md  circuit_breaker.py  retry.py
core/tools/executors/usage_calculators/: cost_calculator.py  generic_calculator.py
core/tools/executors/validators/: basic_validator.py  noop_validator.py  validator.py  validators.py
core/tools/interfaces/: __init__.py  interfaces.py  tool_interfaces.py
core/tools/runtimes/: ARCHITECTURE.md  __init__.py
core/tools/runtimes/emitters/: __init__.py  emitter_factory.py  noop_emitter.py
core/tools/runtimes/executors/: EXECUTOR_ARCHITECTURE.md  __init__.py  base_executor.py  executor.py  executor_factory.py  noop_executor.py
core/tools/runtimes/idempotency/: README.md  USAGE_EXAMPLES.md  __init__.py  custom_idempotency_key_gen.py  field_idempotency_key_gen.py  hash_idempotency_key_gen.py  idempotency_key_gen_factory.py  idempotency_key_generator.py
core/tools/runtimes/limiters/: __init__.py  limiter_factory.py  noop_limiter.py
core/tools/runtimes/memory/: __init__.py  memory_factory.py  noop_memory.py
core/tools/runtimes/metrics/: __init__.py  metrics_factory.py  noop_metrics.py
core/tools/serializers/: README.md  __init__.py  tool_serializer.py
core/tools/spec/: __init__.py  tool_config.py  tool_context.py  tool_context_builder.py  tool_parameters.py  tool_result.py  tool_types.py
examples/: factory_and_builder_demo.py  tool_serialization_example.py
tests/: conftest.py  test_main.py  test_tools_system.py
tests/circuitBreaker/: __init__.py  test_CircuitBreaker.py
tests/llms/: __init__.py  test_azure_integration.py  test_llm_factory.py
tests/logging/: test_ConfigManager.py  test_DelayedLogger.py  test_DurationLogger.py  test_Integration.py  test_LoggerAdaptor.py
tests/tools/: README.md  STANDARDS_COMPLIANCE.md  __init__.py  mocks.py  test_custom_scenario.py  test_executor_factory.py  test_idempotency_strategies.py  test_implementations.py  test_policies.py  test_tool_executors.py  test_tool_serializer.py  tool_implementations.py
utils/: Result.py  __init__.py  main.py  pyproject.toml
utils/circuitBreaker/: CircuitBreaker.py
utils/logging/: ConfigManager.py  DelayedLogger.py  DurationLogger.py  Enum.py  LoggerAdaptor.py  RedactionManager.py  duration_logging_demo.py
utils/logging/Config/: log_config_dev.json  log_config_prod.json  log_config_staging.json  log_config_test.json
(+58 files in other folders)
