[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "boto3>=1.41.0",
    "botocore>=1.41.0",
    "pybreaker>=1.4.0",
    "pydantic>=2.11.9",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.8",
]

[tool.uv.workspace]
members = [
    "Utils",
]

[tool.pytest.ini_options]
# Test discovery - Modular architecture support
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options optimized for development
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--durations=10",
    "--durations-min=1.0",
]

# Markers for test categorization - Updated for modular architecture
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests across modules",
    "unit: marks tests as unit tests for individual modules",
    "smoke: marks tests as smoke tests",
    "logger: tests for LoggerAdaptor module",
    "duration: tests for DurationLogger module",
    "delayed: tests for DelayedLogger module",
    "config: tests for ConfigManager module",
    "asyncio: marks tests as async tests",
    "tools: tests for tool executors and implementations",
    "implementations: tests for no-op and basic implementation classes",
    "serializer: tests for tool serialization/deserialization",
]

# Asyncio configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Minimum Python version
minversion = "6.0"

# Test timeout (in seconds)
timeout = 300

# Logging configuration for tests
log_cli = true
log_cli_level = "INFO"
log_file = "logs/test_run.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Filter warnings
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
